added albums to readme, modified homepage

--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -2,7 +2,7 @@
 
   <div class="jumbotron">
     <div class="container text-center">
-      <h1>Welcome to CRUD API</h1>
+      <h1>Welcome to Mutably<br><small>Mutable, CRUD API</small></h1>
       <br>
       <a href="https://github.com/GuildCrafts/mutably" class="btn btn-lg btn-default"><i class="fa fa-github"></i> View the Docs</a>
     </div>
