--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,6 +36,7 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="/reset">Reset Seed Data</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
