--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -8,6 +8,6 @@
     </div>
   </div>
 
-  <img src="endpoints_docs.jpg" class="img-responsive"/>
+  <!-- <img src="endpoints_docs.jpg" class="img-responsive"/> -->
 
 <% include ../partials/footer %>
